<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.single_character.EditItemFragment"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:hint="@string/title"
            android:textColor="@color/blue"
            android:textColorHint="@color/grey"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:gravity="center"
            app:cornerRadius="16dp" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:hint="@string/description"
            android:textColor="@color/blue"
            android:textColorHint="@color/grey"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:gravity="center"
            app:cornerRadius="16dp" />

        <Button
            android:id="@+id/edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="18dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/edit_image"
            android:layout_gravity="center"
            app:cornerRadius="16dp"
            android:backgroundTint="@color/blue" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="18dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:cornerRadius="16dp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
