<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.add_character.AddItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_promo_code"
            android:textSize="40sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/blue" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_machine_learning"
            android:id="@+id/add_mlkit_item"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add_promo_code_from_image"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:cornerRadius="16dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_promo_code_title"
                android:id="@+id/item_title"
                android:textColor="@color/blue"
                android:textColorHint="@color/grey"
                android:padding="15dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_promo_code"
                android:id="@+id/item_description"
                android:textColor="@color/blue"
                android:textColorHint="@color/grey"
                android:padding="15dp"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/pick_image"
            android:id="@+id/image_btn"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/blue" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/result_image" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_gravity="center"
            android:id="@+id/btn_finish"
            android:layout_marginTop="10dp"
            android:padding="18dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            app:backgroundTint="@color/blue" />
    </LinearLayout>
</ScrollView>
