<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/background"
    app:rippleColor="@color/grey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/logo"
            android:id="@+id/item_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_item_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/item_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/item_detailed_description"
                android:id="@+id/item_description"
                android:layout_marginTop="6dp"/>

            <TextView
                android:id="@+id/item_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/long_press_to_edit_and_swipe_to_delete"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="2"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
